package mabubu0203.com.github.catcafe.domain.value;

import lombok.Getter;
import lombok.RequiredArgsConstructor;
import lombok.experimental.Accessors;

@RequiredArgsConstructor
@Accessors(fluent = true)
@Getter
public class CastId {

    private final Integer intValue;

}
