@startuml

package entity {

  package store {

    class StoreEntity {
      - StoreId storeId
      - String name
      - PhoneNumber phoneNumber
      - MailAddress mailAddress
      - StoreAddress address
      - LocalDate openDate
      - LocalDate closeDate
      - StoreHours hours
      - Memo memo
      - LocalDateTime createdDateTime
      - Integer version
      - LocalDateTime updatedDateTime
    }

    class StoreAddress {
      - PostalCode postalCode
      - PrefectureCode prefectureCode
      - String address1
      - String address2
      - String address3
      - String streetAddress
      - String building_name
      - String supplement
    }

    class StoreHours {
      - LocalTime openingTime
      - LocalTime closingTime
      - String supplement
    }

    class StoreSearchConditions {
      - Optional<List<Integer>> optStoreIds
    }

    StoreEntity "1" -- "1" StoreAddress
    StoreEntity "1" -- "1" StoreHours
  }

  package cast {

    class CastEntity {
      - CastId castId
      - StoreId storeId
      - Memo memo
      - LocalDateTime createdDateTime
      - Integer version
      - LocalDateTime updatedDateTime
      - CastCatEntity CastCatEntity
    }

    class CastCatEntity {
      - CastCatId castCatId
      - String name
      - String image
      - String type
      - GenderOfCat sex
      - Memo memo
      - LocalDateTime createdDateTime
      - Integer version
      - LocalDateTime updatedDateTime
    }

    class CastSearchConditions {
      - Optional<List<Integer>> optStoreIds
      - Optional<List<Integer>> optCastIds
    }

    CastEntity "1..*" -- "1" CastCatEntity

  }

  package notice {

    class NoticeEntity {
      - NoticeId noticeId
      - StoreId storeId
      - String summary
      - String detail
      - LocalDateTime publicationStartDateTime
      - LocalDateTime publicationEndDateTime
      - LocalDateTime createdDateTime
      - Integer version
      - LocalDateTime updatedDateTime
    }

    class NoticeSearchConditions {
      - Optional<List<Integer>> optStoreIds
      - Optional<List<Integer>> optNoticeIds
    }

  }

  StoreEntity "1" -- "0..*" CastEntity
  StoreEntity "1" -- "0..*" NoticeEntity

}

package value {

  class Memo{}

  class PhoneNumber{}

  class MailAddress{}

  class PostalCode{}

  package entityId {

    class CastCatId{}

    class CastId{}

    class NoticeId{}

    class StoreId{}
    
  }

  package enum {

    class PrefectureCode{}

    class GenderOfCat{}

  }

}
@enduml